modificados algunos archivos, añadidos fragmentos de codigo de la versión que tengo en local medio funcionando pero sin eventos

--- a/client.config
+++ b/client.config
@@ -1,2 +1,6 @@
-IceStorm.ReceiverManager.Proxy=IceStorm/TopicManager:tcp -p 10000
-PrinterAdapter.Endpoints=tcp
+AdapterFactoryReceiver.Endpoints=tcp
+AdapterFactoryReceiver.AdapterId=AdapterReceiver72
+AdapterFactoryReceiver.Locator=IceGrid/Locator -t:tcp -h 127.0.0.1 -p 9999
+
+
+Ice.Default.Locator=IceGrid/Locator -t:tcp -h 127.0.0.1 -p 9999
