--- a/senders.config
+++ b/senders.config
@@ -1,1 +1,6 @@
-senders.config
+AdapterFactorySender.Endpoints=tcp
+AdapterFactorySender.AdapterId=AdapterSender72
+AdapterFactorySender.Locator=IceGrid/Locator -t:tcp -h 127.0.0.1 -p 9999
+
+
+Ice.Default.Locator=IceGrid/Locator -t:tcp -h 127.0.0.1 -p 9999
