--- a/transfer.config
+++ b/transfer.config
@@ -1,1 +1,6 @@
-transfer.config
+AdapterFactoryTransfer.Endpoints=tcp
+AdapterFactoryTransfer.AdapterId=AdapterTransfer72
+AdapterFactoryTransfer.Locator=IceGrid/Locator -t:tcp -h 127.0.0.1 -p 9999
+
+
+Ice.Default.Locator=IceGrid/Locator -t:tcp -h 127.0.0.1 -p 9999
