--- a/icebox.config
+++ b/icebox.config
@@ -1,3 +1,3 @@
-IceBox.Service.IceStorm=IceStormService:createIceStorm --Ice.Config=icestorm.config
+IceBox.Service.IceStorm=IceStormService,37:createIceStorm --Ice.Config=./icestorm.config
 
 
